--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Shared/_Layout.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Shared/_Layout.cshtml
@@ -36,11 +36,11 @@
                             @{
                                 if (permisos_usuario.verificar_permiso("SC-01234", 0, IdPermiso.ELIMINAR_PERFILES))
                                 {
-                                    <li>@Html.ActionLink("Eliminar perfiles", "Borrar", "Perfil")</li>
+                                    <li>@Html.ActionLink("Borrar perfiles", "Borrar", "Perfil")</li>
                                 }
                                 else
                                 {
-                                    <li class="disabled"><a id="link_deshabilitado">Eliminar perfil</a></li>
+                                    <li class="disabled"><a id="link_deshabilitado">Borrar perfil</a></li>
                                 }
                             }
                         </ul>
