Se agrega la funcionalidad de que muestre la vista parcial AgregarOpciones solo en un caso específico.

--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Item/Create.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Item/Create.cshtml
@@ -32,7 +32,9 @@
     <div class="form-group">
         @Html.Label("Tipo Pregunta", htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Html.DropDownListFor(model => model.TipoPregunta, new SelectList(ViewBag.TipoPreguntaItems, "Value", "Text"), "Seleccione", htmlAttributes: new { @class = "form-control" })
+            @Html.DropDownListFor(model => model.TipoPregunta,
+             new SelectList(ViewBag.TipoPreguntaItems, "Value", "Text"), "Seleccione", htmlAttributes: new { @class = "form-control", id = "comboboxtipopregunta",
+             placeholder = "TipoPregunta", data_width = "100%", onchange = "habilitarVistaParcialAgregarOpciones(this.value)"})
             @Html.ValidationMessageFor(model => model.TipoPregunta, "", new { @class = "text-danger" })
         </div>
     </div>
@@ -89,9 +91,14 @@
 
     @* La sección de código para habilitar el despliegue de la Vista Parcial AgregarOpciones *@
     <script>
-        function habilitarVistaParcialAgregarOpciones()
+        function habilitarVistaParcialAgregarOpciones(tipoPregunta)
         {
-            document.getElementById("opciones").hidden = "";
+            @*var e = document.getElementById("comboboxtipopregunta");
+            var strValue = e.options[e.selectedIndex].text;*@
+            if (tipoPregunta == 2)
+            {
+                document.getElementById("opciones").hidden = "";
+            }
         }
     </script>
 
