Un ligero cambio a la vista de la creación de Item, para hacer funcional el despliegue de la vista parcial AgregarOpciones.

--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Item/Create.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Item/Create.cshtml
@@ -93,10 +93,9 @@
     <script>
         function habilitarVistaParcialAgregarOpciones(tipoPregunta)
         {
-            @*var e = document.getElementById("comboboxtipopregunta");
-            var strValue = e.options[e.selectedIndex].text;*@
-            if (tipoPregunta == 2)
-            {
+            document.getElementById("opciones").hidden = "hidden";
+
+            if (tipoPregunta.localeCompare("2") == 0) {
                 document.getElementById("opciones").hidden = "";
             }
         }
