--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/CrearFormulario/AsignarPreguntas.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/CrearFormulario/AsignarPreguntas.cshtml
@@ -214,7 +214,7 @@
                 @Html.Partial("VistaFormularioVParcial", Model.Conformados)
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
             </div>
         </div>
     </div>
