Avance de mostrar asignaciones de formularios

--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/AsignarPeriodo/Index.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/AsignarPeriodo/Index.cshtml
@@ -39,8 +39,9 @@
                         </thead>
                         <tbody>
                             <!-- Despliega los datos de los grupos usando un template personalizado: ElegirGrupoEditorTemplate -->
-                            @Html.EditorFor(model => Model.Grupos)
-                            @Html.EditorFor(model => Model.Formularios)
+                           @* @Html.EditorFor(model => Model.Grupos)*@
+                            @Html.EditorFor(model => Model.Asignaciones)
+         
 
                             @*@Html.DisplayFor(Model => Model.Formularios)*@
                         </tbody>
