Creacion del metodo que devuelve las respuestas de texto libre con ajax

--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/VisualizarFormulario/Details.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/VisualizarFormulario/Details.cshtml
@@ -196,8 +196,29 @@
 
                                                             @foreach (var item in Model.Formulario_Respuesta)
                                                             {
-                                                                <p>Respuesta de estudiante, texto para verificar que el tamanno para el cuadro de texto sea apropiado, lo cual indica que se pueda ver la suficiente informacion, a la vez que no se consuma mucho espacio en pantalla y evite al usuario concentrase en la respuesta de una pregunta. Tambien para comprobar con los companneros de equipo que les parece y si creen que el tamanno deber ser mas grande o mas pequenno, ya que se tiene que tomar un promedio del tamanno de una respuesta de un estudiante.</p>
+                                                                <p>Respuesta de estudiante generica.</p>
                                                                 <hr>
+                                                            }
+
+                                                            @foreach (var item in Model.Formulario_Respuesta.Take(1))
+                                                            {
+                                                                <script>
+                                                                $.ajax({
+                                                                    type: "POST",
+                                                                    url: "/VisualizarFormulario/ObtenerRespTexto",
+                                                                    data: "{ 'codigoFormulario': '@item.CodigoFormulario', 'cedulaProfesor': '@item.Profesor.CedulaProfesor', 'annoGrupo': '@item.Grupo.AnnoGrupo', 'semestreGrupo': '@item.Grupo.SemestreGrupo', 'numeroGrupo': '@item.Grupo.Numero', 'siglaCurso': '@item.Grupo.SiglaCurso', 'itemId': '@seccion.Item.ItemId' }" ,
+                                                                    contentType: "application/json; charset=utf-8",
+                                                                    dataType: "json",
+                                                                    success: function (chData) {
+                                                                    var aData = chData;
+                                                                    var obs = aData[0];
+                                                                    //var nom = aData[1];
+                                                                        for (var data in obs) {
+                                                                            document.getElementById("info_@item_actual").innerHTML = document.getElementById("info_@item_actual").innerText + (obs[data]).toString();
+                                                                        }
+                                                                    }
+                                                                 });
+                                                                </script>
                                                             }
 
                                                         </div>
@@ -244,16 +265,11 @@
                                                                                                 document.getElementById("info_@item_actual").innerHTML = document.getElementById("info_@item_actual").innerText + (obs[data]).toString();
                                                                                                 //if (@perfil_actual == "Admin")
                                                                                                 //{
-                                                                                                 //   for (var name in nom) { document.getElementById("info_@item_actual").innerHTML = document.getElementById("info_@item_actual").innerText + " - " + (obs[data]).toString(); }
-                                                                                                 //   for (var nick1 in ap1) { document.getElementById("info_@item_actual").innerHTML = document.getElementById("info_@item_actual").innerText + (obs[data]).toString(); }
-                                                                                                 //   for (var nick2 in ap2) { document.getElementById("info_@item_actual").innerHTML = document.getElementById("info_@item_actual").innerText + (obs[data]).toString(); }
-                                                                                                //}
+                                                                                                 //}
                                                                                             }
                                                                                                 }
                                                                                             });
                                                                                 </script>
-
-
                                                                             }
 
                                                                             @*Se ocupa encontrar la forma de devolver las observaciones por pregunta*@
