--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Shared/_Layout.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Shared/_Layout.cshtml
@@ -93,7 +93,7 @@
 
                                 //if (permisos_usuario.verificar_permiso("SC-89457", 12, IdPermiso.CALIFICAR_CURSOS))
                                 //{
-                                    <li>@Html.ActionLink("Evaluar profesores", "Index", "LlenarFormulario")</li>
+                                    <li>@Html.ActionLink("Evaluar profesores", "Index", "CursosMatriculados")</li>
                                 @*}
                                 else
                                 {
