Controlador y modelo para mostrar formulario asignado a cada curso

--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/CursosMatriculados/Index.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/CursosMatriculados/Index.cshtml
@@ -55,7 +55,7 @@
                             @Html.DisplayFor(model => item.apellido2Profe)
                         </td>
                         <td>
-                           @Html.ActionLink(item.formulario, "", "");
+                           @Html.ActionLink(item.formulario, "Index", "FormularioCurso");
                         </td>
                     </tr>               
             }
