Se muestran las preguntas del formulario asignado a un curso

--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/CursosMatriculados/Index.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/CursosMatriculados/Index.cshtml
@@ -55,7 +55,7 @@
                             @Html.DisplayFor(model => item.apellido2Profe)
                         </td>
                         <td>
-                           @Html.ActionLink(item.formulario, "Index", "FormularioCurso");
+                           @Html.ActionLink(item.formulario, "Index", "FormularioCurso", new { cedulaEstudiante = item.cedEst , codigoForm = item.codFormulario}, null);
                         </td>
                     </tr>               
             }
