--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Shared/_Layout.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Shared/_Layout.cshtml
@@ -32,11 +32,19 @@
                         <ul class="dropdown-menu">
                             <li>@Html.ActionLink("Cambiar perfil actual", "Cambiar", "Perfil")</li>
                             <li class="disabled"><a id="link_deshabilitado">Asignar/Revocar permisos</a></li>
-                            <li class="disabled"><a id="link_deshabilitado">Crear perfil</a></li>
                             @{
                                 if (permisos_usuario.verificar_permiso("SC-01234", 0, IdPermiso.ELIMINAR_PERFILES))
                                 {
-                                    <li>@Html.ActionLink("Eliminar perfiles", "Borrar", "Perfil")</li>
+                                    <li>@Html.ActionLink("Crear perfil", "Crear", "Perfil")</li>
+                                }
+                                else
+                                {
+                                    <li class="disabled"><a id="link_deshabilitado">Crear perfil</a></li>
+                                }
+
+                                if (permisos_usuario.verificar_permiso("SC-01234", 0, IdPermiso.ELIMINAR_PERFILES))
+                                {
+                                    <li>@Html.ActionLink("Borrar perfil", "Borrar", "Perfil")</li>
                                 }
                                 else
                                 {
