--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Shared/_Layout.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Shared/_Layout.cshtml
@@ -17,7 +17,7 @@
 
     @if (IdentidadManager.usuario_loggeado() == true)
     {
-    var permisos_usuario = (IdentidadManager)Session[IdentidadManager.obtener_correo_actual()];
+        var permisos_usuario = (IdentidadManager)Session[IdentidadManager.obtener_correo_actual()];
 
         <nav class="navbar navbar-opiniometro-ternaria navbar-fixed-top" style="margin-top:90px; z-index:999">
             <div class="container-fluid">
@@ -30,10 +30,20 @@
                     <li class="dropdown">
                         <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Perfiles<span class="caret"></span></a>
                         <ul class="dropdown-menu">
+                            @{ 
                             <li>@Html.ActionLink("Cambiar perfil actual", "Index", "Perfil")</li>
                             <li class="disabled"><a id="link_deshabilitado">Asignar/Revocar permisos</a></li>
+                                if (permisos_usuario.verificar_permiso("SC-01234", 0, IdPermiso.VER_INFORMACION_PERSONAS))
+                                {
+                            <li>@Html.ActionLink("Ver perfiles", "VerPerfiles", "Perfil")</li>
+                                }
+                                else
+                                {
+                            <li class="disabled"><a id="link_deshabilitado">Ver información de personas</a></li>
+                                }
                             <li class="disabled"><a id="link_deshabilitado">Crear perfil</a></li>
                             <li class="disabled"><a id="link_deshabilitado">Eliminar perfil</a></li>
+                                }
                         </ul>
                     </li>
                     <li class="dropdown">
